Improvents on Smoluchowski example

--- a/notebooks/smoluchowski/smoluchowski.ipynb
+++ b/notebooks/smoluchowski/smoluchowski.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5da8f5d",
+   "id": "9ab8a3eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
     "import deepRD\n",
     "from deepRD.diffusionIntegrators import smoluchowski"
@@ -16,20 +17,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5339e79",
+   "id": "a7e66bb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define particle list\n",
     "D=1.0 #diffusion coefficient\n",
-    "particle1 = deepRD.particle([2,0,0],D)\n",
-    "particleList = deepRD.particleList([particle1])"
+    "#particle1 = deepRD.particle([2,0,0],D)\n",
+    "particleList = deepRD.particleList([])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae39847e",
+   "id": "e9128a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +38,9 @@
     "dt = 0.01\n",
     "stride = 1\n",
     "tfinal = 100\n",
-    "kappa = 0.0\n",
-    "sigma = 1.0\n",
-    "R = 10.0\n",
+    "kappa = 1000.0\n",
+    "sigma = 0.0\n",
+    "R = 1.0\n",
     "deltar = 0.05\n",
     "cR = 1.0\n",
     "diffIntegrator = smoluchowski(dt, stride, tfinal, D, kappa, sigma, R, deltar, cR)"
@@ -48,17 +49,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ada33fd",
+   "id": "cd0795e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t, X = diffIntegrator.propagate(particleList)"
+    "t, positionsArrays = diffIntegrator.propagate(particleList)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15b995a0",
+   "id": "3e485871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,31 +69,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1a19c1",
+   "id": "1f5b3a5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X"
+    "# Transform position arrays to radial distances array\n",
+    "distancesArray = []\n",
+    "for X in positionsArrays:\n",
+    "    if len(X)>0:\n",
+    "        distancesArray.append(np.linalg.norm(X, axis=1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f228f181",
+   "id": "c63e6141",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot trajectory in x, y and z\n",
-    "particleIndex = 0\n",
-    "#plt.plot(X[:,particleIndex], label = ['x','y','z']);\n",
-    "plt.plot(X[:,particleIndex,0][0:100], label = 'x');\n",
-    "plt.legend()"
+    "distancesArray[-1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215abbca",
+   "id": "7237974e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestepIndex = -1\n",
+    "fig, ax = plt.subplots()\n",
+    "bw=0.1\n",
+    "concDensity = stats.kde.gaussian_kde(distancesArray[timestepIndex],bw)\n",
+    "\n",
+    "distance = np.arange(sigma, R, 0.02)\n",
+    "#ax.plot(distance, concDensity(distance), '-k') # label='benchmark')\n",
+    "ax.plot(distance, concDensity(distance)/(4*np.pi*distance**2),'--k') # label='benchmark')\n",
+    "\n",
+    "ax.set_xlim((sigma, R))\n",
+    "ax.set_ylim((0, None))\n",
+    "ax.set_xlabel('radial distance')\n",
+    "ax.set_ylabel('Concentration')\n",
+    "\n",
+    "#ax.legend(bbox_to_anchor=(0.6, 0., 0.5, 1.0), framealpha=1.0)\n",
+    "\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28e9976",
    "metadata": {},
    "outputs": [],
    "source": []
