--- a/notebooks/geneticFeedbackModel.ipynb
+++ b/notebooks/geneticFeedbackModel.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "from deepRD.plotFunctions import plotTrajectories, plotFPTs\n",
     "from deepRD.reactionModels import geneticFeedback\n",
-    "from deepRD.reactionIntegrators import gillespie"
+    "from deepRD.reactionIntegrators import gillespie, tauleap"
    ]
   },
   {
@@ -56,7 +56,8 @@
     "# they are in units of 1/hour, but need to double check. \n",
     "sigmau = 2.71 # (1/hour)\n",
     "sigmab = 12.0/averagePconc # (volume/hour)\n",
-    "genFeedbackModel.setModelParameters(rhou, rhob, sigmau, sigmab, dm, dp, k, volume)"
+    "genFeedbackModel.setModelParameters(rhou, rhob, sigmau, sigmab, dm, dp, k, volume)\n",
+    "genFeedbackModel.updatePropensities()"
    ]
   },
   {
@@ -67,7 +68,9 @@
    "outputs": [],
    "source": [
     "# Create integrator\n",
-    "integratorGillespie = gillespie(stride=1, tfinal=1000)"
+    "reactionIntegrator = gillespie(stride=1, tfinal=10)\n",
+    "#dt = 0.005\n",
+    "#reactionIntegrator = tauleap(dt,stride=1, tfinal=10)"
    ]
   },
   {
@@ -77,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t, X = integratorGillespie.propagate(genFeedbackModel)"
+    "t, X = reactionIntegrator.propagate(genFeedbackModel)"
    ]
   },
   {
@@ -133,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
