--- a/notebooks/openSystems/plotSmoluchowski.ipynb
+++ b/notebooks/openSystems/plotSmoluchowski.ipynb
@@ -46,11 +46,11 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "simID = '0001'\n",
+    "simID = '0007'\n",
     "localDataDirectory = os.environ.get('DATA') + 'openSystems/classicSmoluchowski_' + simID\n",
     "parameterDictionary = analysisTools.readParameters(localDataDirectory + \"/parameters_\" + simID)\n",
     "# Parameters for loading continuous trajectories from files (from original simulation)\n",
-    "numSimulations =  parameterDictionary['numSimulations']\n",
+    "numSimulations = parameterDictionary['numSimulations']\n",
     "D = parameterDictionary['D'] \n",
     "dt = parameterDictionary['dt']\n",
     "stride = parameterDictionary['stride']\n",
@@ -78,26 +78,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62377d80",
+   "id": "84afff22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate average concentration\n",
-    "nbins = 20\n",
+    "# Calculate average concentration with bootstrapping stdDevs\n",
+    "nbins = 30\n",
+    "numSimulations = 1000\n",
     "# Calculate values of middle points of histogram\n",
     "hist, bins = np.histogram(distancesArrays[0], bins=nbins, range=(sigma,R))\n",
     "rvals = np.zeros(len(bins)-1)\n",
     "rvolumes = np.zeros(len(bins)-1)\n",
+    "binsize = bins[1]-bins[0]\n",
     "for i in range(len(bins)-1):\n",
     "    rvals[i] = (bins[i+1] + bins[i])/2.0\n",
     "    rvolumes[i] = 4*np.pi*(bins[i+1]**3 - bins[i]**3)/3.0 # Approx alternative: 4*np.pi* rvals[i]**2*(bins[i+1]-bins[i])\n",
     "# Calculate average concentration\n",
     "concentrationHistogram = np.zeros(len(bins)-1)\n",
+    "stdDevs = np.zeros(len(bins)-1)\n",
+    "concHist = [None]*numSimulations\n",
     "for i in range(numSimulations):\n",
     "    hist, bins = np.histogram(distancesArrays[i], bins=nbins, range=(sigma,R))\n",
-    "    concHist = hist/rvolumes\n",
-    "    concentrationHistogram += concHist\n",
-    "concentrationHistogram = concentrationHistogram/(numSimulations)"
+    "    concHist[i] = hist/rvolumes\n",
+    "for j in range(len(concentrationHistogram)):\n",
+    "    concentrationHistogram[j] = np.mean(np.array(concHist)[:,j])\n",
+    "    stdDevs[j] = np.std(np.array(concHist)[:,j])"
    ]
   },
   {
@@ -109,28 +114,34 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "bw=0.1\n",
-    "\n",
+    "fsize = 15\n",
     "# Calculate analytical solution\n",
-    "kappa = 10\n",
-    "sigma = 1.0 \n",
-    "R = 10.0\n",
-    "cR = 1.0\n",
-    "rvals = np.arange(sigma,R,0.1)\n",
+    "#kappa = 10\n",
+    "#sigma = 1.0 \n",
+    "#R = 10.0\n",
+    "#cR = 1.0\n",
+    "#rvals = np.arange(sigma,R,0.1)\n",
     "kS = 4*np.pi*sigma*D\n",
     "analyticCKRinf = cR*(1 - kappa*sigma/(kS + kappa)*(1/rvals))\n",
     "analyticCK = cR*(1 - kappa*sigma/(kS + kappa*(1-sigma/R))*(1.0/rvals - 1.0/R))\n",
     "\n",
     "\n",
-    "#ax.plot(rvals, concentrationHistogram,'--k', label='simulation')\n",
+    "ax.plot(rvals, analyticCK,'-k', linewidth =1, label='benchmark')\n",
+    "ax.plot(rvals, concentrationHistogram,'--b', linewidth = 2, label='simulation (n=1000)')\n",
+    "ax.fill_between(rvals, concentrationHistogram-stdDevs, concentrationHistogram+stdDevs, alpha=0.2, \n",
+    "                edgecolor='#1B2ACC', facecolor='#089FFF', linewidth=2, antialiased=True)\n",
     "#ax.plot(rvals, analyticCKRinf,'-r', lw =3, label='benchmark Rinf')\n",
-    "ax.plot(rvals, analyticCK,'-k', label='benchmark')\n",
     "\n",
-    "ax.set_xlim((sigma, R))\n",
+    "ax.set_xlim((sigma+binsize, R-binsize))\n",
     "ax.set_ylim((0, None))\n",
-    "ax.set_xlabel('radial distance')\n",
-    "ax.set_ylabel('Concentration')\n",
+    "ax.set_xlabel('radial distance',fontsize=fsize)\n",
+    "ax.set_ylabel('Concentration',fontsize=fsize)\n",
+    "ax.tick_params(axis='x', labelsize=fsize)\n",
+    "ax.tick_params(axis='y', labelsize=fsize)\n",
     "\n",
-    "#ax.legend(bbox_to_anchor=(0.6, 0., 0.5, 1.0), framealpha=1.0)\n",
+    "\n",
+    "\n",
+    "ax.legend(bbox_to_anchor=(0.6, 0., 0.4, 0.3), framealpha=1.0,fontsize=fsize)\n",
     "\n",
     "plt.tight_layout()"
    ]
