--- a/notebooks/openSystems/plotSmoluchowski.ipynb
+++ b/notebooks/openSystems/plotSmoluchowski.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "simID = '0007'\n",
+    "simID = '0001'\n",
     "localDataDirectory = os.environ.get('DATA') + 'openSystems/classicSmoluchowski_' + simID\n",
     "parameterDictionary = analysisTools.readParameters(localDataDirectory + \"/parameters_\" + simID)\n",
     "# Parameters for loading continuous trajectories from files (from original simulation)\n",
@@ -58,7 +58,6 @@
     "kappa = parameterDictionary['kappa'] \n",
     "sigma = parameterDictionary['sigma']\n",
     "R = parameterDictionary['R']\n",
-    "deltar = parameterDictionary['deltar']\n",
     "cR = parameterDictionary['cR']\n",
     "equilibrationSteps = parameterDictionary['equilibrationSteps']"
    ]
@@ -84,7 +83,7 @@
    "source": [
     "# Calculate average concentration with bootstrapping stdDevs\n",
     "nbins = 30\n",
-    "numSimulations = 1000\n",
+    "#numSimulations = 500\n",
     "# Calculate values of middle points of histogram\n",
     "hist, bins = np.histogram(distancesArrays[0], bins=nbins, range=(sigma,R))\n",
     "rvals = np.zeros(len(bins)-1)\n",
@@ -144,6 +143,81 @@
     "ax.legend(bbox_to_anchor=(0.6, 0., 0.4, 0.3), framealpha=1.0,fontsize=fsize)\n",
     "\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff123d6",
+   "metadata": {},
+   "source": [
+    "## Plots for paper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f2636b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate average concentration\n",
+    "nSimsList = [500,1000,5000]\n",
+    "concentrationHistograms=[None]*len(nSimsList)\n",
+    "stdDevs = [None]*len(nSimsList)\n",
+    "for k, nsims in enumerate(nSimsList):\n",
+    "    concentrationHistograms[k] = np.zeros(len(bins)-1)\n",
+    "    stdDevs[k] = np.zeros(len(bins)-1)\n",
+    "    concHist = [None]*nsims\n",
+    "    for i in range(nsims):\n",
+    "        hist, bins = np.histogram(distancesArrays[i], bins=nbins, range=(sigma,R))\n",
+    "        concHist[i] = hist/rvolumes\n",
+    "    for j in range(len(concentrationHistograms[k])):\n",
+    "        concentrationHistograms[k][j] = np.mean(np.array(concHist)[:,j])\n",
+    "        stdDevs[k][j] = np.std(np.array(concHist)[:,j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af0fa3ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,3, figsize=(14,4), sharey=True, squeeze= True)\n",
+    "bw=0.1\n",
+    "fsize = 15\n",
+    "\n",
+    "#Analytical solution\n",
+    "kS = 4*np.pi*sigma*D\n",
+    "analyticCKRinf = cR*(1 - kappa*sigma/(kS + kappa)*(1/rvals))\n",
+    "analyticCK = cR*(1 - kappa*sigma/(kS + kappa*(1-sigma/R))*(1.0/rvals - 1.0/R))\n",
+    "\n",
+    "for k, nsims in enumerate(nSimsList):\n",
+    "    ax[k].plot(rvals, analyticCK,'-k', linewidth =1, label='benchmark')\n",
+    "    ax[k].plot(rvals, concentrationHistograms[k],'--b', linewidth = 2, label='simulation (n='+ str(nsims) + ')')\n",
+    "    ax[k].fill_between(rvals, concentrationHistogram[k]-stdDevs[k], concentrationHistograms[k]+stdDevs[k], alpha=0.2, \n",
+    "                    edgecolor='#1B2ACC', facecolor='#089FFF', linewidth=2, antialiased=True)\n",
+    "    #ax.plot(rvals, analyticCKRinf,'-r', lw =3, label='benchmark Rinf')\n",
+    "\n",
+    "    ax[k].set_xlim((sigma+binsize, R-binsize))\n",
+    "    ax[k].set_ylim((0, 1.25))\n",
+    "    ax[k].set_xlabel('r',fontsize=fsize)\n",
+    "    ax[k].tick_params(axis='x', labelsize=fsize)\n",
+    "    ax[k].tick_params(axis='y', labelsize=fsize)\n",
+    "    ax[k].legend(bbox_to_anchor=(0.6, 0., 0.4, 0.3), framealpha=1.0,fontsize=fsize)\n",
+    "\n",
+    "\n",
+    "ax[0].set_ylabel('Concentration',fontsize=fsize)\n",
+    "\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08078602",
+   "metadata": {},
+   "source": [
+    "## Old plots"
    ]
   },
   {
