Updated plotting notebook

--- a/notebooks/openSystems/plotSmoluchowski.ipynb
+++ b/notebooks/openSystems/plotSmoluchowski.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Load parameters from parameters file\n",
-    "simID = '0001'\n",
+    "simID = '0005'\n",
     "localDataDirectory = os.environ.get('DATA') + 'openSystems/classicSmoluchowski_' + simID\n",
     "parameterDictionary = analysisTools.readParameters(localDataDirectory + \"/parameters_\" + simID)\n",
     "# Parameters for loading continuous trajectories from files (from original simulation)\n",
@@ -77,13 +77,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b77f7a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(distancesArrays),cR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84afff22",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate average concentration with bootstrapping stdDevs\n",
     "nbins = 30\n",
-    "#numSimulations = 500\n",
+    "#numSimulations = 1500\n",
     "# Calculate values of middle points of histogram\n",
     "hist, bins = np.histogram(distancesArrays[0], bins=nbins, range=(sigma,R))\n",
     "rvals = np.zeros(len(bins)-1)\n",
@@ -115,7 +125,7 @@
     "bw=0.1\n",
     "fsize = 15\n",
     "# Calculate analytical solution\n",
-    "#kappa = 10\n",
+    "kappa = 10\n",
     "#sigma = 1.0 \n",
     "#R = 10.0\n",
     "#cR = 1.0\n",
@@ -126,8 +136,8 @@
     "\n",
     "\n",
     "ax.plot(rvals, analyticCK,'-k', linewidth =1, label='benchmark')\n",
-    "ax.plot(rvals, concentrationHistogram,'--b', linewidth = 2, label='simulation (n=1000)')\n",
-    "ax.fill_between(rvals, concentrationHistogram-stdDevs, concentrationHistogram+stdDevs, alpha=0.2, \n",
+    "ax.plot(rvals, concentrationHistogram,'--b', linewidth = 2, label='simulation (n='+ str(numSimulations)+')')\n",
+    "ax.fill_between(rvals, concentrationHistogram-stdDevs, concentrationHistogram+stdDevs, alpha=0.1, \n",
     "                edgecolor='#1B2ACC', facecolor='#089FFF', linewidth=2, antialiased=True)\n",
     "#ax.plot(rvals, analyticCKRinf,'-r', lw =3, label='benchmark Rinf')\n",
     "\n",
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff123d6",
+   "id": "950e055d",
    "metadata": {},
    "source": [
     "## Plots for paper"
@@ -156,17 +166,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2636b1",
+   "id": "2a0394b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate average concentration\n",
-    "nSimsList = [500,1000,5000]\n",
+    "nSimsList = [100,500,5000]\n",
     "concentrationHistograms=[None]*len(nSimsList)\n",
     "stdDevs = [None]*len(nSimsList)\n",
     "for k, nsims in enumerate(nSimsList):\n",
-    "    concentrationHistograms[k] = np.zeros(len(bins)-1)\n",
-    "    stdDevs[k] = np.zeros(len(bins)-1)\n",
+    "    concentrationHistograms[k] = np.zeros(nbins)\n",
+    "    stdDevs[k] = np.zeros(nbins)\n",
     "    concHist = [None]*nsims\n",
     "    for i in range(nsims):\n",
     "        hist, bins = np.histogram(distancesArrays[i], bins=nbins, range=(sigma,R))\n",
@@ -179,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0fa3ab",
+   "id": "c0ad5609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,18 +199,20 @@
     "\n",
     "#Analytical solution\n",
     "kS = 4*np.pi*sigma*D\n",
+    "kappa=8.5\n",
     "analyticCKRinf = cR*(1 - kappa*sigma/(kS + kappa)*(1/rvals))\n",
     "analyticCK = cR*(1 - kappa*sigma/(kS + kappa*(1-sigma/R))*(1.0/rvals - 1.0/R))\n",
     "\n",
     "for k, nsims in enumerate(nSimsList):\n",
     "    ax[k].plot(rvals, analyticCK,'-k', linewidth =1, label='benchmark')\n",
     "    ax[k].plot(rvals, concentrationHistograms[k],'--b', linewidth = 2, label='simulation (n='+ str(nsims) + ')')\n",
-    "    ax[k].fill_between(rvals, concentrationHistogram[k]-stdDevs[k], concentrationHistograms[k]+stdDevs[k], alpha=0.2, \n",
+    "    ax[k].fill_between(rvals, concentrationHistograms[k]-stdDevs[k], concentrationHistograms[k]+stdDevs[k], alpha=0.1, \n",
     "                    edgecolor='#1B2ACC', facecolor='#089FFF', linewidth=2, antialiased=True)\n",
     "    #ax.plot(rvals, analyticCKRinf,'-r', lw =3, label='benchmark Rinf')\n",
     "\n",
     "    ax[k].set_xlim((sigma+binsize, R-binsize))\n",
     "    ax[k].set_ylim((0, 1.25))\n",
+    "    ax[k].set_ylim((0, 0.75))\n",
     "    ax[k].set_xlabel('r',fontsize=fsize)\n",
     "    ax[k].tick_params(axis='x', labelsize=fsize)\n",
     "    ax[k].tick_params(axis='y', labelsize=fsize)\n",
@@ -209,12 +221,13 @@
     "\n",
     "ax[0].set_ylabel('Concentration',fontsize=fsize)\n",
     "\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig('Smoluchowski_plots_cR=' + str(cR) + '.pdf')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08078602",
+   "id": "b2c4efd7",
    "metadata": {},
    "source": [
     "## Old plots"
